--- a/package.json
+++ b/package.json
@@ -12,16 +12,16 @@
     "bcryptjs": "^2.4.3",
     "firebase": "^12.0.0",
     "framer-motion": "^12.23.12",
+    "jose": "^5.9.6",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.7.0",
     "lucide-react": "^0.536.0",
+    "mongoose": "^8.7.0",
     "next": "^15.4.5",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
-    "jose": "^5.9.6",
-    "zod": "^3.23.8",
-    "swiper": "^11.2.10"
+    "swiper": "^11.2.10",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
