--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "axios": "^1.11.0",
+    "@reduxjs/toolkit": "^2.9.0",
+    "axios": "^1.12.2",
     "bcryptjs": "^2.4.3",
     "firebase": "^12.0.0",
     "framer-motion": "^12.23.12",
@@ -21,6 +22,7 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
+    "react-redux": "^9.2.0",
     "swiper": "^11.2.10",
     "zod": "^3.23.8"
   },
