--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
     "react-spinners": "^0.17.0",
+    "react-toastify": "^11.0.5",
     "swiper": "^11.2.10",
     "zod": "^3.23.8"
   },
