--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
+    "react-select": "^5.10.2",
+    "react-select-country-list": "^2.2.3",
     "react-spinners": "^0.17.0",
     "react-toastify": "^11.0.5",
     "swiper": "^11.2.10",
